Fix cta text alignment

--- a/app/assets/stylesheets/sephora_style_guide/mixins/_buttons.scss
+++ b/app/assets/stylesheets/sephora_style_guide/mixins/_buttons.scss
@@ -1,6 +1,6 @@
 // Button sizes
 @mixin button-size($padding-y, $padding-x, $font-size) {
-  padding: ($padding-y + 1px) $padding-x ($padding-y - 1px);
+  padding: ($padding-y + 2px) $padding-x ($padding-y - 2px);
   font-size: $font-size;
   line-height: $font-size;
 }
